include/mcp/c_api/mcp_c_api.h

/* ============================================================================
 * Library Version and Initialization
 * ============================================================================
 */

/**
 * Initialize the MCP library
 * Must be called before any other API functions
 * @param allocator Custom allocator (NULL for default)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_init(const mcp_allocator_t* allocator) MCP_NOEXCEPT;
/**
 * Shutdown the MCP library
 * Cleans up all resources and checks for leaks
 */
MCP_API void mcp_shutdown(void) MCP_NOEXCEPT;
/**
 * Check if library is initialized
 * @return MCP_TRUE if initialized
 */
MCP_API mcp_bool_t mcp_is_initialized(void) MCP_NOEXCEPT;
/**
 * Get library version information
 * @return Version string (do not free)
 */
MCP_API const char* mcp_get_version(void) MCP_NOEXCEPT;
/* ============================================================================
 * RAII Guard Functions with Enhanced Safety
 * ============================================================================
 */

/**
 * RAII guard handle for automatic resource cleanup
 * Guards are automatically destroyed when going out of scope in C++
 * For C users, explicit destruction is required
 */
typedef struct mcp_guard_impl* mcp_guard_t;
/**
 * Guard cleanup callback for custom resources
 */
typedef void (*mcp_guard_cleanup_fn)(void* resource) MCP_NOEXCEPT;
/**
 * Create a RAII guard for a handle with automatic cleanup
 * @param handle Handle to guard (takes ownership)
 * @param type Type of handle for validation
 * @return Guard handle or NULL on error
 */
MCP_API mcp_guard_t mcp_guard_create(void* handle,
                                     mcp_type_id_t type) MCP_NOEXCEPT;
/**
 * Create a RAII guard with custom cleanup function
 * @param handle Handle to guard (takes ownership)
 * @param type Type of handle for validation
 * @param cleanup Custom cleanup function
 * @return Guard handle or NULL on error
 */
MCP_API mcp_guard_t mcp_guard_create_custom(void* handle,
                                            mcp_type_id_t type,
                                            mcp_guard_cleanup_fn cleanup)
    MCP_NOEXCEPT;
/**
 * Release resource from guard (prevents automatic cleanup)
 * @param guard Guard handle (will be nullified)
 * @return Original handle (caller takes ownership)
 */
MCP_API void* mcp_guard_release(mcp_guard_t* guard) MCP_NOEXCEPT;
/**
 * Destroy guard and cleanup resource
 * @param guard Guard handle (will be nullified)
 */
MCP_API void mcp_guard_destroy(mcp_guard_t* guard) MCP_NOEXCEPT;
/**
 * Check if guard is valid and holds a resource
 * @param guard Guard handle
 * @return MCP_TRUE if valid
 */
MCP_API mcp_bool_t mcp_guard_is_valid(mcp_guard_t guard) MCP_NOEXCEPT;
/**
 * Get the guarded resource without releasing ownership
 * @param guard Guard handle
 * @return Guarded resource or NULL
 */
MCP_API void* mcp_guard_get(mcp_guard_t guard) MCP_NOEXCEPT;
/* ============================================================================
 * Transaction Management for Multiple Resources
 * ============================================================================
 */

/**
 * Transaction handle for atomic multi-resource operations
 * Ensures all-or-nothing semantics for resource operations
 */
typedef struct mcp_transaction_impl* mcp_transaction_t;
/**
 * Transaction options for fine-grained control
 */
typedef struct mcp_transaction_opts {
  mcp_bool_t auto_rollback;   /* Auto-rollback on error */
  mcp_bool_t strict_ordering; /* Enforce strict cleanup order */
  uint32_t max_resources;     /* Maximum resources (0 = unlimited) */
} mcp_transaction_opts_t;
/**
 * Create a new transaction with default options
 * @return Transaction handle or NULL on error
 */
MCP_API mcp_transaction_t mcp_transaction_create(void) MCP_NOEXCEPT;
/**
 * Create a new transaction with custom options
 * @param opts Transaction options
 * @return Transaction handle or NULL on error
 */
MCP_API mcp_transaction_t
mcp_transaction_create_ex(const mcp_transaction_opts_t* opts) MCP_NOEXCEPT;
/**
 * Add resource to transaction with automatic cleanup
 * @param txn Transaction handle
 * @param handle Resource handle (ownership transferred)
 * @param type Resource type for validation
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_transaction_add(mcp_transaction_t txn,
                                         void* handle,
                                         mcp_type_id_t type) MCP_NOEXCEPT;
/**
 * Add resource with custom cleanup function
 * @param txn Transaction handle
 * @param handle Resource handle (ownership transferred)
 * @param type Resource type for validation
 * @param cleanup Custom cleanup function
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_transaction_add_custom(mcp_transaction_t txn,
                                                void* handle,
                                                mcp_type_id_t type,
                                                mcp_guard_cleanup_fn cleanup)
    MCP_NOEXCEPT;
/**
 * Get number of resources in transaction
 * @param txn Transaction handle
 * @return Number of resources
 */
MCP_API size_t mcp_transaction_size(mcp_transaction_t txn) MCP_NOEXCEPT;
/**
 * Commit transaction (prevent cleanup)
 * @param txn Transaction handle (will be nullified)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_transaction_commit(mcp_transaction_t* txn)
    MCP_NOEXCEPT;
/**
 * Rollback transaction (cleanup all resources)
 * @param txn Transaction handle (will be nullified)
 */
MCP_API void mcp_transaction_rollback(mcp_transaction_t* txn) MCP_NOEXCEPT;
/**
 * Destroy transaction (auto-rollback if not committed)
 * @param txn Transaction handle (will be nullified)
 */
MCP_API void mcp_transaction_destroy(mcp_transaction_t* txn) MCP_NOEXCEPT;
/**
 * Check if transaction is valid
 * @param txn Transaction handle
 * @return MCP_TRUE if valid
 */
MCP_API mcp_bool_t mcp_transaction_is_valid(mcp_transaction_t txn) MCP_NOEXCEPT;
/* ============================================================================
 * Event Loop & Dispatcher
 * ============================================================================
 */

/**
 * Create a new dispatcher (event loop)
 * @return Dispatcher handle or NULL on error
 */
MCP_API mcp_dispatcher_t mcp_dispatcher_create(void) MCP_NOEXCEPT;
/**
 * Create dispatcher with RAII guard
 * @param guard Output: RAII guard for automatic cleanup
 * @return Dispatcher handle or NULL on error
 */
MCP_API mcp_dispatcher_t mcp_dispatcher_create_guarded(mcp_guard_t* guard)
    MCP_NOEXCEPT;
/**
 * Run the dispatcher (blocks until stopped)
 * @param dispatcher Dispatcher handle
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_dispatcher_run(mcp_dispatcher_t dispatcher)
    MCP_NOEXCEPT;
/**
 * Run dispatcher for specified duration
 * @param dispatcher Dispatcher handle
 * @param timeout_ms Maximum time to run in milliseconds
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_dispatcher_run_timeout(
    mcp_dispatcher_t dispatcher, uint32_t timeout_ms) MCP_NOEXCEPT;
/**
 * Stop the dispatcher
 * @param dispatcher Dispatcher handle
 */
MCP_API void mcp_dispatcher_stop(mcp_dispatcher_t dispatcher) MCP_NOEXCEPT;
/**
 * Post a callback to dispatcher thread
 * @param dispatcher Dispatcher handle
 * @param callback Callback function
 * @param user_data User data for callback
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_dispatcher_post(mcp_dispatcher_t dispatcher,
                                         mcp_callback_t callback,
                                         void* user_data) MCP_NOEXCEPT;
/**
 * Check if current thread is dispatcher thread
 * @param dispatcher Dispatcher handle
 * @return MCP_TRUE if in dispatcher thread
 */
MCP_API mcp_bool_t mcp_dispatcher_is_thread(mcp_dispatcher_t dispatcher)
    MCP_NOEXCEPT;
/**
 * Create a timer
 * @param dispatcher Dispatcher handle
 * @param callback Timer callback
 * @param user_data User data for callback
 * @return Timer ID or 0 on error
 */
MCP_API uint64_t mcp_dispatcher_create_timer(mcp_dispatcher_t dispatcher,
                                             mcp_timer_callback_t callback,
                                             void* user_data) MCP_NOEXCEPT;
/**
 * Enable/arm a timer
 * @param dispatcher Dispatcher handle
 * @param timer_id Timer ID
 * @param timeout_ms Timeout in milliseconds
 * @param repeat Whether to repeat
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_dispatcher_enable_timer(mcp_dispatcher_t dispatcher,
                                                 uint64_t timer_id,
                                                 uint32_t timeout_ms,
                                                 mcp_bool_t repeat)
    MCP_NOEXCEPT;
/**
 * Disable a timer
 * @param dispatcher Dispatcher handle
 * @param timer_id Timer ID
 */
MCP_API void mcp_dispatcher_disable_timer(mcp_dispatcher_t dispatcher,
                                          uint64_t timer_id) MCP_NOEXCEPT;
/**
 * Destroy a timer
 * @param dispatcher Dispatcher handle
 * @param timer_id Timer ID
 */
MCP_API void mcp_dispatcher_destroy_timer(mcp_dispatcher_t dispatcher,
                                          uint64_t timer_id) MCP_NOEXCEPT;
/**
 * Destroy dispatcher
 * @param dispatcher Dispatcher handle
 */
MCP_API void mcp_dispatcher_destroy(mcp_dispatcher_t dispatcher) MCP_NOEXCEPT;
/* ============================================================================
 * Connection Management with RAII
 * ============================================================================
 */

/**
 * Extended transport configuration for MCP connections
 */
typedef struct mcp_transport_config {
  mcp_transport_type_t type;

  /* Transport-specific configuration */
  union {
    struct {
      mcp_bool_t use_tls;
      const char* alpn_protocols; /* Comma-separated ALPN protocols */
      const char* sni_hostname;   /* SNI hostname for TLS */
    } tcp;

    struct {
      int stdin_fd;  /* -1 for default stdin */
      int stdout_fd; /* -1 for default stdout */
      int stderr_fd; /* -1 for default stderr */
    } stdio;

    struct {
      const char* http_headers; /* Additional HTTP headers for MCP */
      uint32_t retry_delay_ms;
      uint32_t max_retries;
      mcp_bool_t use_compression;
    } http_sse;
  } config;

  /* Common options */
  uint32_t connect_timeout_ms;
  uint32_t idle_timeout_ms;
  mcp_bool_t enable_keepalive;
  uint32_t keepalive_interval_ms;
} mcp_transport_config_t;
/**
 * Create a client connection (simplified)
 * @param dispatcher Dispatcher handle
 * @param transport Transport type
 * @return Connection handle or NULL on error
 */
MCP_API mcp_connection_t mcp_connection_create_client(
    mcp_dispatcher_t dispatcher, mcp_transport_type_t transport) MCP_NOEXCEPT;