sdk/csharp/src/Interop/McpApi.cs

using System;
using System.Runtime.InteropServices;
using static GopherMcp.Interop.McpTypes;
using static GopherMcp.Interop.McpHandles;
using static GopherMcp.Interop.McpCallbacks;

namespace GopherMcp.Interop
{
    /// <summary>
    /// P/Invoke declarations for main MCP C API functions (mcp_c_api.h)
    /// </summary>
    public static class McpApi
    {
        // Library name - adjust based on platform naming conventions
#if WINDOWS
        private const string LibraryName = "mcp_c.dll";
#elif MACOS
        private const string LibraryName = "libmcp_c.dylib";
#else
        private const string LibraryName = "libmcp_c.so";
#endif

        /* ============================================================================
         * Library Version and Initialization
         * ============================================================================ */

        /// <summary>
        /// Initialize the MCP library
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_init(IntPtr allocator);

        /// <summary>
        /// Shutdown the MCP library
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_shutdown();

        /// <summary>
        /// Check if library is initialized
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_is_initialized();

        /// <summary>
        /// Get library version information
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_get_version();

        /* ============================================================================
         * RAII Guard Functions
         * ============================================================================ */

        /// <summary>
        /// Guard cleanup callback delegate
        /// </summary>
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void mcp_guard_cleanup_fn(IntPtr resource);

        /// <summary>
        /// Create a RAII guard for a handle
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpGuardHandle mcp_guard_create(IntPtr handle, mcp_type_id_t type);

        /// <summary>
        /// Create a RAII guard with custom cleanup
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpGuardHandle mcp_guard_create_custom(
            IntPtr handle,
            mcp_type_id_t type,
            mcp_guard_cleanup_fn cleanup);

        /// <summary>
        /// Release resource from guard
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_guard_release(ref McpGuardHandle guard);

        /// <summary>
        /// Destroy guard and cleanup resource
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_guard_destroy(ref McpGuardHandle guard);

        /// <summary>
        /// Check if guard is valid
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_guard_is_valid(McpGuardHandle guard);

        /// <summary>
        /// Get the guarded resource
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_guard_get(McpGuardHandle guard);

        /* ============================================================================
         * Transaction Management
         * ============================================================================ */

        /// <summary>
        /// Transaction options structure
        /// </summary>
        [StructLayout(LayoutKind.Sequential)]
        public struct mcp_transaction_opts_t
        {
            public mcp_bool_t auto_rollback;
            public mcp_bool_t strict_ordering;
            public uint max_resources;
        }

        /// <summary>
        /// Create a new transaction
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpTransactionHandle mcp_transaction_create();

        /// <summary>
        /// Create a new transaction with options
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpTransactionHandle mcp_transaction_create_ex(
            ref mcp_transaction_opts_t opts);

        /// <summary>
        /// Add resource to transaction
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_transaction_add(
            McpTransactionHandle txn,
            IntPtr handle,
            mcp_type_id_t type);

        /// <summary>
        /// Add resource with custom cleanup
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_transaction_add_custom(
            McpTransactionHandle txn,
            IntPtr handle,
            mcp_type_id_t type,
            mcp_guard_cleanup_fn cleanup);

        /// <summary>
        /// Get number of resources in transaction
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr mcp_transaction_size(McpTransactionHandle txn);

        /// <summary>
        /// Commit transaction
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_transaction_commit(ref McpTransactionHandle txn);

        /// <summary>
        /// Rollback transaction
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_transaction_rollback(ref McpTransactionHandle txn);

        /// <summary>
        /// Destroy transaction
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_transaction_destroy(ref McpTransactionHandle txn);

        /// <summary>
        /// Check if transaction is valid
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_transaction_is_valid(McpTransactionHandle txn);

        /* ============================================================================
         * Event Loop & Dispatcher
         * ============================================================================ */

        /// <summary>
        /// Create a new dispatcher
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpDispatcherHandle mcp_dispatcher_create();

        /// <summary>
        /// Create dispatcher with RAII guard
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpDispatcherHandle mcp_dispatcher_create_guarded(out McpGuardHandle guard);

        /// <summary>
        /// Run the dispatcher
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_dispatcher_run(McpDispatcherHandle dispatcher);

        /// <summary>
        /// Run dispatcher for specified duration
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_dispatcher_run_timeout(
            McpDispatcherHandle dispatcher,
            uint timeout_ms);

        /// <summary>
        /// Stop the dispatcher
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_dispatcher_stop(McpDispatcherHandle dispatcher);

        /// <summary>
        /// Post a callback to dispatcher thread
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_dispatcher_post(
            McpDispatcherHandle dispatcher,
            MCP_CALLBACK callback,
            IntPtr user_data);

        /// <summary>
        /// Check if current thread is dispatcher thread
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_dispatcher_is_thread(McpDispatcherHandle dispatcher);

        /// <summary>
        /// Create a timer
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong mcp_dispatcher_create_timer(
            McpDispatcherHandle dispatcher,
            MCP_TIMER_CALLBACK callback,
            IntPtr user_data);

        /// <summary>
        /// Enable/arm a timer
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_dispatcher_enable_timer(
            McpDispatcherHandle dispatcher,
            ulong timer_id,
            uint timeout_ms,
            mcp_bool_t repeat);

        /// <summary>
        /// Disable a timer
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_dispatcher_disable_timer(
            McpDispatcherHandle dispatcher,
            ulong timer_id);

        /// <summary>
        /// Destroy a timer
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_dispatcher_destroy_timer(
            McpDispatcherHandle dispatcher,
            ulong timer_id);

        /// <summary>
        /// Destroy dispatcher
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_dispatcher_destroy(McpDispatcherHandle dispatcher);

        /* ============================================================================
         * Connection Management
         * ============================================================================ */

        /// <summary>
        /// Extended transport configuration
        /// </summary>
        [StructLayout(LayoutKind.Sequential)]
        public struct mcp_transport_config_t
        {
            public mcp_transport_type_t type;
            
            // Transport-specific config would need proper union mapping
            // For now, using IntPtr for the union data
            public IntPtr config_data;
            
            public uint connect_timeout_ms;
            public uint idle_timeout_ms;
            public mcp_bool_t enable_keepalive;
            public uint keepalive_interval_ms;
        }

        /// <summary>
        /// Create a client connection
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpConnectionHandle mcp_connection_create_client(
            McpDispatcherHandle dispatcher,
            mcp_transport_type_t transport);
